admin browserstack windows10

--- a/.classpath
+++ b/.classpath
@@ -43,5 +43,6 @@
 	<classpathentry kind="lib" path="/home/isha/Downloads/selenium-server-3.9.1/libs/xalan-2.7.2.jar"/>
 	<classpathentry kind="lib" path="/home/isha/Downloads/selenium-server-3.9.1/libs/xercesImpl-2.11.0.jar"/>
 	<classpathentry kind="lib" path="/home/isha/Downloads/selenium-server-3.9.1/libs/xml-apis-1.4.01.jar"/>
+	<classpathentry kind="lib" path="/home/isha/Downloads/testng-6.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
